sdk/python/lib/test/automation/errors/conflict_error/go.mod
module testproj

go 1.14

require github.com/pulumi/pulumi/sdk/v2 v2.22.0
